--- a/game.html
+++ b/game.html
@@ -152,13 +152,13 @@
     let player = {
       x: 0,
       y: 0,
-      height: 90,  // 高さを90pxに増加
-      width: 90,   // 初期幅も90pxに増加
-      baseWidth: 90, // 基本幅も90pxに
+      height: 90,
+      width: 90,
+      baseWidth: 90,
       isDragging: false,
       powerLevel: 1,
       shotCount: 1,
-      maxShotCount: 3
+      maxShotCount: 4
     };
     let isPaused = false;
     let isGameStarted = false;
@@ -202,16 +202,19 @@
     Enemy.prototype.baseSpeed = 0.05;
     Enemy.prototype.baseHp = 50;
 
-    // パワーアップアイテムクラスを調整
+    // パワーアップアイテムクラスを修正
     class PowerUp {
       constructor(x, y) {
         this.x = x;
         this.y = y;
-        this.radius = 40; // サイズを大きく
-        this.hp = 50;     // HPを増加
+        this.radius = 40;
+        this.hp = 50;
         this.maxHp = 50;
-        this.speedY = 0.1; // 速度を上げる
-        this.type = Math.random() < 0.5 ? PowerUpType.DAMAGE : PowerUpType.MULTI_SHOT;
+        this.speedY = 0.1;
+        // プレイヤーが最大列数の場合、攻撃力アップの確率を上げる
+        this.type = player.shotCount >= player.maxShotCount ? 
+          (Math.random() < 0.8 ? PowerUpType.DAMAGE : PowerUpType.MULTI_SHOT) : 
+          (Math.random() < 0.5 ? PowerUpType.DAMAGE : PowerUpType.MULTI_SHOT);
       }
 
       update(deltaTime) {
@@ -406,17 +409,8 @@
         lastPowerUpTime = performance.now();
       }
 
-      // 弾の発射（一定間隔で）
-      if (!gameOver && !isPaused && performance.now() % 200 < 16) {
-        const spread = player.width * 0.7;
-        const offset = (player.shotCount - 1) * spread / 2;
-        for (let i = 0; i < player.shotCount; i++) {
-          const bulletX = player.x - offset + i * spread;
-          const bullet = new Bullet(bulletX, player.y - player.height/2);
-          bullet.damage = 10 * player.powerLevel;
-          bullets.push(bullet);
-        }
-      }
+      // 弾の発射
+      fireBullets();
 
       // パワーアップアイテムの更新
       powerUps = powerUps.filter(powerUp => {
@@ -715,9 +709,16 @@
           notification.style.color = '#ff6666';
           notification.style.textShadow = '0 0 20px #ff0000';
         } else {
-          player.shotCount = Math.min(player.maxShotCount, player.shotCount + 1);
-          player.width = player.baseWidth * player.shotCount;
-          notification.textContent = `${player.shotCount}列追加！`;
+          if (player.shotCount < player.maxShotCount) {
+            // 列を1つ追加
+            player.shotCount++;
+            player.width = player.baseWidth * player.shotCount;
+            notification.textContent = `+1列追加！ (${player.shotCount}列)`;
+          } else {
+            // 最大列数の場合は攻撃力が下がるペナルティ
+            player.powerLevel = Math.max(1, player.powerLevel - 1);
+            notification.textContent = `攻撃力 -10！`;
+          }
           notification.style.color = '#66ff66';
           notification.style.textShadow = '0 0 20px #00ff00';
         }
@@ -736,6 +737,21 @@
         return true;
       }
       return false;
+    }
+
+    // 弾の発射処理を修正
+    function fireBullets() {
+      if (!gameOver && !isPaused && performance.now() % 200 < 16) {
+        const unitWidth = player.width / player.shotCount; // 1列あたりの幅
+        
+        for (let i = 0; i < player.shotCount; i++) {
+          const bulletX = player.x - player.width/2 + unitWidth * (i + 0.5); // 各列の中央から発射
+          const bulletY = player.y - player.height/2; // プレイヤーの上端から発射
+          const bullet = new Bullet(bulletX, bulletY);
+          bullet.damage = 10 * player.powerLevel;
+          bullets.push(bullet);
+        }
+      }
     }
 
     // ゲームリセット時にエフェクトもクリア
