--- a/game.html
+++ b/game.html
@@ -122,9 +122,108 @@
       font-weight: bold;
       letter-spacing: 2px;
     }
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 60px;
+      background: rgba(0, 0, 0, 0.8);
+      backdrop-filter: blur(5px);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 20px;
+      z-index: 1000;
+    }
+    .logo {
+      color: white;
+      font-size: 24px;
+      font-weight: bold;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .logo img {
+      height: 40px;
+      width: auto;
+    }
+    nav ul {
+      display: flex;
+      gap: 20px;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-size: 16px;
+      transition: color 0.3s;
+    }
+    nav a:hover {
+      color: #ff4444;
+    }
+    footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: rgba(0, 0, 0, 0.8);
+      backdrop-filter: blur(5px);
+      padding: 15px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 1000;
+    }
+    .footer-links {
+      display: flex;
+      gap: 20px;
+    }
+    .footer-links a {
+      color: #cccccc;
+      text-decoration: none;
+      font-size: 14px;
+      transition: color 0.3s;
+    }
+    .footer-links a:hover {
+      color: white;
+    }
+    .copyright {
+      color: #cccccc;
+      font-size: 14px;
+    }
+    #titleScreen {
+      padding: 60px 0;  // ヘッダーの高さ分余白を追加
+    }
   </style>
 </head>
 <body>
+  <header>
+    <a href="#" class="logo">
+      <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23ff4444'%3E%3Cpath d='M12 2L1 21h22L12 2zm0 3.99L19.53 19H4.47L12 5.99z'/%3E%3C/svg%3E" alt="Logo">
+      SWIPE ATTACK
+    </a>
+    <nav>
+      <ul>
+        <li><a href="#" onclick="showRanking()">ランキング</a></li>
+        <li><a href="#" onclick="showHelp()">遊び方</a></li>
+        <li><a href="#" onclick="showSettings()">設定</a></li>
+      </ul>
+    </nav>
+  </header>
+  <footer>
+    <div class="footer-links">
+      <a href="#" onclick="showTerms()">利用規約</a>
+      <a href="#" onclick="showPrivacy()">プライバシーポリシー</a>
+      <a href="#" onclick="showContact()">お問い合わせ</a>
+    </div>
+    <div class="copyright">
+      © 2024 SWIPE ATTACK All Rights Reserved.
+    </div>
+  </footer>
   <canvas id="gameCanvas"></canvas>
   <button id="pauseButton">⏸</button>
   <div id="score">Damage: 0</div>
@@ -810,6 +909,30 @@
       document.getElementById('score').textContent = 'Damage: 0';
       document.getElementById('powerUpNotification').style.opacity = '0';
       document.getElementById('powerUpNotification').style.transform = 'translate(-50%, -50%) scale(1)';
+    }
+
+    function showRanking() {
+      alert('ランキング機能は準備中です');
+    }
+
+    function showHelp() {
+      alert('遊び方ページは準備中です');
+    }
+
+    function showSettings() {
+      alert('設定画面は準備中です');
+    }
+
+    function showTerms() {
+      alert('利用規約は準備中です');
+    }
+
+    function showPrivacy() {
+      alert('プライバシーポリシーは準備中です');
+    }
+
+    function showContact() {
+      alert('お問い合わせフォームは準備中です');
     }
   </script>
 </body>
