アップデート

--- a/terms.html
+++ b/terms.html
@@ -188,7 +188,12 @@
         <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23ff4444'%3E%3Cpath d='M12 2L1 21h22L12 2zm0 3.99L19.53 19H4.47L12 5.99z'/%3E%3C/svg%3E" alt="Logo">
         SWIPE ATTACK
       </a>
-      <button onclick="location.href='game.html'" class="back-button">ゲームに戻る</button>
+      <nav>
+        <ul>
+          <li><a href="howto.html">遊び方</a></li>
+          <li><a href="game.html" class="back-button">ゲームに戻る</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
@@ -277,9 +282,9 @@
   <footer>
     <div class="footer-links">
       <a href="terms.html">利用規約</a>
-      <a href="privacy.html">プライバシーポリシー</a>
+      <a href="mailto:fjtyk95@gmail.com">お問い合わせ</a>
     </div>
-    <div class="copyright">© 2024 SWIPE ATTACK All Rights Reserved.</div>
+    <div class="copyright">© 2024 SWIPE ATTACK - Created by Yuki Fujita</div>
   </footer>
 </body>
 </html> 
