--- a/game.html
+++ b/game.html
@@ -196,7 +196,7 @@
       font-size: 14px;
     }
     #titleScreen {
-      padding: 60px 0;  // ヘッダーの高さ分余白を追加
+      padding: 60px 0;
     }
     header, footer {
       transition: opacity 0.3s, visibility 0.3s;
