--- a/game.html
+++ b/game.html
@@ -127,13 +127,13 @@
       top: 0;
       left: 0;
       right: 0;
-      height: 70px;
+      height: 90px;
       background: rgba(0, 0, 0, 0.8);
       backdrop-filter: blur(5px);
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0 24px;
+      padding: 0 30px;
       z-index: 1000;
       box-sizing: border-box;
     }
@@ -143,7 +143,7 @@
     }
     .logo {
       color: white;
-      font-size: 28px;
+      font-size: 32px;
       font-weight: bold;
       text-decoration: none;
       display: flex;
@@ -151,7 +151,7 @@
       gap: 10px;
     }
     .logo img {
-      height: 48px;
+      height: 54px;
       width: auto;
     }
     nav ul {
@@ -164,8 +164,8 @@
     nav a {
       color: white;
       text-decoration: none;
-      font-size: 20px;
-      padding: 12px 20px;
+      font-size: 24px;
+      padding: 16px 24px;
       transition: color 0.3s;
       display: inline-block;
     }
@@ -179,7 +179,7 @@
       right: 0;
       background: rgba(0, 0, 0, 0.8);
       backdrop-filter: blur(5px);
-      padding: 20px 24px;
+      padding: 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -193,8 +193,8 @@
     .footer-links a {
       color: #cccccc;
       text-decoration: none;
-      font-size: 18px;
-      padding: 12px 16px;
+      font-size: 22px;
+      padding: 16px 24px;
       transition: color 0.3s;
       display: inline-block;
     }
@@ -203,7 +203,7 @@
     }
     .copyright {
       color: #cccccc;
-      font-size: 16px;
+      font-size: 20px;
     }
     #titleScreen {
       padding: 60px 0;
@@ -220,34 +220,34 @@
 
     @media (max-width: 768px) {
       header {
-        height: 80px;
-        padding: 0 20px;
+        height: 100px;
+        padding: 0 24px;
       }
 
       .logo {
-        font-size: 24px;
+        font-size: 28px;
       }
 
       .logo img {
-        height: 42px;
+        height: 48px;
       }
 
       nav a {
-        font-size: 22px;
-        padding: 15px 20px;
+        font-size: 26px;
+        padding: 18px 26px;
       }
 
       footer {
-        padding: 24px 20px;
+        padding: 32px 24px;
       }
 
       .footer-links a {
-        font-size: 20px;
-        padding: 15px 20px;
+        font-size: 24px;
+        padding: 18px 26px;
       }
 
       .copyright {
-        font-size: 18px;
+        font-size: 22px;
       }
     }
   </style>
@@ -685,7 +685,22 @@
         isGameStarted = true;
         document.getElementById('titleScreen').style.display = 'none';
         document.body.classList.add('game-started');
+        lastFrameTime = performance.now();
+        requestAnimationFrame(gameLoop);
         resetGame();
+        
+        // プレイヤーの初期化
+        player = {
+          x: canvas.width / 2,
+          y: canvas.height - 100,
+          height: 90,
+          width: 90,
+          baseWidth: 90,
+          isDragging: false,
+          powerLevel: 1,
+          shotCount: 1,
+          maxShotCount: 4
+        };
       }
     });
 
@@ -931,7 +946,6 @@
       totalDamage = 0;
       gameOver = false;
       isPaused = false;
-      isGameStarted = false;
       gameTime = 0;
       difficultyLevel = 1;
       lastEnemySpawnTime = 0;
@@ -942,7 +956,6 @@
       document.getElementById('powerUpNotification').style.opacity = '0';
       document.getElementById('powerUpNotification').style.transform = 'translate(-50%, -50%) scale(1)';
       document.getElementById('gameOver').style.display = 'none';
-      document.body.classList.remove('game-started');
     }
 
     function showRanking() {
