--- a/terms.html
+++ b/terms.html
@@ -218,7 +218,7 @@
 
     <section>
       <h2>第3条（知的財産権）</h2>
-      <p>本サービスに関する著作権、商標権、特許権、その他一切の知的財産権は、原則として藤田侑希（以下、制作者という）または正当な権利者に帰属します。</p>
+      <p>本サービスに関する著作権、商標権、特許権、その他一切の知的財産権は、原則として藤田侑希（以下、制作者といいます）または正当な権利者に帰属します。</p>
       <p>ユーザーは、制作者の明示的な許諾なく、本サービスの内容の全部または一部を複製、転載、改変、頒布、二次利用してはなりません。</p>
     </section>
 
