--- a/howto.html
+++ b/howto.html
@@ -7,8 +7,124 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
 
-    /* terms.htmlと同じスタイルを継承 */
-    /* ... 基本的なスタイル ... */
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Noto Sans JP', sans-serif;
+      background: linear-gradient(to bottom, #1a1a2e, #16213e);
+      color: #ffffff;
+      line-height: 1.6;
+      min-height: 100vh;
+    }
+
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 90px;
+      background: rgba(0, 0, 0, 0.8);
+      backdrop-filter: blur(5px);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 30px;
+      z-index: 1000;
+      box-sizing: border-box;
+    }
+
+    .header-content {
+      display: flex;
+      align-items: center;
+    }
+
+    .logo {
+      color: white;
+      font-size: 32px;
+      font-weight: bold;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .logo img {
+      height: 54px;
+      width: auto;
+    }
+
+    nav ul {
+      display: flex;
+      gap: 20px;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-size: 24px;
+      padding: 16px 24px;
+      transition: color 0.3s;
+      display: inline-block;
+    }
+
+    nav a:hover {
+      color: #ff4444;
+    }
+
+    footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: rgba(0, 0, 0, 0.8);
+      backdrop-filter: blur(5px);
+      padding: 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 1000;
+      box-sizing: border-box;
+    }
+
+    .footer-links {
+      display: flex;
+      gap: 24px;
+    }
+
+    .footer-links a {
+      color: #cccccc;
+      text-decoration: none;
+      font-size: 22px;
+      padding: 16px 24px;
+      transition: color 0.3s;
+      display: inline-block;
+    }
+
+    .footer-links a:hover {
+      color: white;
+    }
+
+    .copyright {
+      color: #cccccc;
+      font-size: 20px;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 120px auto 100px;
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 1.5em;
+      text-align: center;
+      color: #ff4444;
+      text-shadow: 0 0 10px rgba(255, 68, 68, 0.5);
+    }
 
     .howto-section {
       background: rgba(255, 255, 255, 0.1);
@@ -16,6 +132,27 @@
       border-radius: 10px;
       margin-bottom: 2em;
       backdrop-filter: blur(5px);
+    }
+
+    .howto-section h2 {
+      color: #ff4444;
+      margin-bottom: 1em;
+      font-size: 1.5em;
+    }
+
+    .howto-section p {
+      margin-bottom: 1em;
+      font-size: 1.1em;
+    }
+
+    .howto-section ul {
+      padding-left: 1.5em;
+      margin-bottom: 1em;
+    }
+
+    .howto-section li {
+      margin-bottom: 0.8em;
+      font-size: 1.1em;
     }
 
     .howto-image {
@@ -33,6 +170,54 @@
       border-radius: 5px;
       margin: 1em 0;
       border-left: 4px solid #ff4444;
+      font-size: 1.1em;
+    }
+
+    @media (max-width: 768px) {
+      header {
+        height: 100px;
+        padding: 0 24px;
+      }
+
+      .logo {
+        font-size: 28px;
+      }
+
+      .logo img {
+        height: 48px;
+      }
+
+      nav a {
+        font-size: 26px;
+        padding: 18px 26px;
+      }
+
+      footer {
+        padding: 32px 24px;
+      }
+
+      .footer-links a {
+        font-size: 24px;
+        padding: 18px 26px;
+      }
+
+      .copyright {
+        font-size: 22px;
+      }
+
+      main {
+        margin: 140px auto 120px;
+      }
+
+      .howto-section {
+        padding: 1.5em;
+      }
+
+      .howto-section p,
+      .howto-section li,
+      .key-point {
+        font-size: 1.2em;
+      }
     }
   </style>
 </head>
