--- a/howto.html
+++ b/howto.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>遊び方 - SWIPE ATTACK</title>
+  <title>遊び方 - Last Woo!</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
 
@@ -226,7 +226,7 @@
     <div class="header-content">
       <a href="game.html" class="logo">
         <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23ff4444'%3E%3Cpath d='M12 2L1 21h22L12 2zm0 3.99L19.53 19H4.47L12 5.99z'/%3E%3C/svg%3E" alt="Logo">
-        SWIPE ATTACK
+        Last Woo!
       </a>
       <nav>
         <ul>
@@ -279,7 +279,7 @@
       <a href="terms.html">利用規約</a>
       <a href="mailto:fjtyk95@gmail.com">お問い合わせ</a>
     </div>
-    <div class="copyright">© 2024 SWIPE ATTACK - Created by Yuki Fujita</div>
+    <div class="copyright">© 2024 Last Woo! - Created by Yuki Fujita</div>
   </footer>
 </body>
 </html> 
