--- a/terms.html
+++ b/terms.html
@@ -185,7 +185,7 @@
   <header>
     <div class="header-content">
       <a href="game.html" class="logo">
-        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23ff4444'%3E%3Cpath d='M12 2L1 21h22L12 2zm0 3.99L19.53 19H4.47L12 5.99z'/%3E%3C/svg%3E" alt="Logo">
+        <img src="logo.webp" alt="Logo">
         Last Woo!
       </a>
       <nav>
